--- a/thesis.bib
+++ b/thesis.bib
@@ -18,3 +18,24 @@
   pages={1660},
   year={1951}
 }
+
+@InProceedings{Baek2014,
+  author          = {Jeihoon Baek and Chihyung Ahn and Bong-chul Kim and Seungdeog Choi and Sangshin Kwak},
+  title           = {High frequency wireless power transfer system for robot vacuum cleaner},
+  year            = {2014},
+  address         = {Las Vegas, NV, USA},
+  pages           = {308--310},
+  publisher       = {IEEE},
+  abstract        = {In this paper, we propose the design and implementation of a wireless power transfer (WPT) system with high frequency magnetic resonant coupling for robot vacuum cleaner. In the WPT system of magnetic resonant coupling, the size of resonance coil depends on the frequency. Therefore, resonant coupling frequency is required to operate at a high frequency such as 6.78MHz. In recent years, WPT have been a replacement of wired charger for mobile devices. However, the output power is limited by the yielding efficiency and volume. This research proposes a high frequency converter to minimize the volume of resonance coil at 6.78MHz and suitable for high power operation over one hundred watt. Simulation and experimental verifications of converter efficiency when the transmission distance is 10mm presented.},
+  date            = {10-13 Jan. 2014},
+  doi             = {10.1109/ICCE.2014.6776018},
+  eventdate       = {10-13 Jan. 2014},
+  eventtitleaddon = {Las Vegas, NV, USA},
+  file            = {:Baek2014 - High Frequency Wireless Power Transfer System for Robot Vacuum Cleaner.html:URL},
+  isbn            = {978-1-4799-1290-2},
+  issn            = {2158-4001},
+  journal         = {2014 IEEE International Conference on Consumer Electronics (ICCE)},
+  keywords        = {Wireless communication, Magnetic resonance, Couplings, Power amplifiers, Power generation, Coils},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
