--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,9 @@
 \documentclass[british,titlepage]{ntnuthesis}
 
-\title{An NTNU Thesis \LaTeX{} Document Class}
-\shorttitle{An NTNU Thesis Document Class}
-\author{Community of Practice in Computer Science Education at NTNU}
-\shortauthor{CoPCSE$@$NTNU}
+\title{Sensitive Information Exposed By The Use Of Robot Vacuum Cleaners In Smart Homes }
+\shorttitle{Sensitive Information Exposed By The Use Of Robot Vacuum Cleaners In Smart Homes}
+\author{Benjamin Andreas Ulsmåg}
+\shortauthor{Benjamin A. U.}
 \date{CC-BY \ntnuthesisdate}
 
 \addbibresource{thesis.bib}
@@ -12,8 +12,11 @@
 
 \begin{document}
 
+\input{chapters/0aa-problem description.tex}
 \input{chapters/0a-abstract.tex}
 \input{chapters/0b-sammendrag.tex}
+\input{chapters/0c-Dedication.tex}
+\input{chapters/0d-frontmatter.tex}
 
 \tableofcontents
 \listoffigures
@@ -23,10 +26,13 @@
 \printglossary[type=\acronymtype] % Print acronyms
 \printglossary                    % Print glossary
 
-\input{chapters/1-introduction}
-\input{chapters/2-usage.tex}
-\input{chapters/3-structure.tex}
-\input{chapters/4-conclusion.tex}
+\input{chapters/1-introduction.tex}
+\input{chapters/2-background.tex}
+\input{chapters/2b-related work.tex}
+\input{chapters/3-Method.tex}
+\input{chapters/4-Results.tex}
+\input{chapters/5-discussion.tex}
+\input{chapters/6-conclution.tex}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
