--- a/thesis.bib
+++ b/thesis.bib
@@ -18,24 +18,198 @@
   pages={1660},
   year={1951}
 }
-
-@InProceedings{Baek2014,
-  author          = {Jeihoon Baek and Chihyung Ahn and Bong-chul Kim and Seungdeog Choi and Sangshin Kwak},
-  title           = {High frequency wireless power transfer system for robot vacuum cleaner},
-  year            = {2014},
-  address         = {Las Vegas, NV, USA},
-  pages           = {308--310},
-  publisher       = {IEEE},
-  abstract        = {In this paper, we propose the design and implementation of a wireless power transfer (WPT) system with high frequency magnetic resonant coupling for robot vacuum cleaner. In the WPT system of magnetic resonant coupling, the size of resonance coil depends on the frequency. Therefore, resonant coupling frequency is required to operate at a high frequency such as 6.78MHz. In recent years, WPT have been a replacement of wired charger for mobile devices. However, the output power is limited by the yielding efficiency and volume. This research proposes a high frequency converter to minimize the volume of resonance coil at 6.78MHz and suitable for high power operation over one hundred watt. Simulation and experimental verifications of converter efficiency when the transmission distance is 10mm presented.},
-  date            = {10-13 Jan. 2014},
-  doi             = {10.1109/ICCE.2014.6776018},
-  eventdate       = {10-13 Jan. 2014},
-  eventtitleaddon = {Las Vegas, NV, USA},
-  file            = {:Baek2014 - High Frequency Wireless Power Transfer System for Robot Vacuum Cleaner.html:URL},
-  isbn            = {978-1-4799-1290-2},
-  issn            = {2158-4001},
-  journal         = {2014 IEEE International Conference on Consumer Electronics (ICCE)},
-  keywords        = {Wireless communication, Magnetic resonance, Couplings, Power amplifiers, Power generation, Coils},
+%IoT security and privacy, good to describe suggested security measures with IoT in pleated work. Also to introduction in backgorund
+@incollection{atlam2020iot,
+  title={IoT security, privacy, safety and ethics},
+  author={Atlam, Hany F and Wills, Gary B},
+  booktitle={Digital twin technologies and smart cities},
+  pages={123--149},
+  year={2020},
+  publisher={Springer}
 }
 
-@Comment{jabref-meta: databaseType:bibtex;}
+%Smart home complexity and adoption. Fog computing, cloud. Consumers need easy to use and integreate  
+@article{mocrii2018iot,
+  title={IoT-based smart homes: A review of system architecture, software, communications, privacy and security},
+  author={Mocrii, Dragos and Chen, Yuxiang and Musilek, Petr},
+  journal={Internet of Things},
+  volume={1},
+  pages={81--98},
+  year={2018},
+  publisher={Elsevier}
+}
+
+%IoT different communication protocols. different links. Edge computing (challenges)
+@article{edu2020smart,
+  title={Smart home personal assistants: a security and privacy review},
+  author={Edu, Jide S and Such, Jose M and Suarez-Tangil, Guillermo},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={53},
+  number={6},
+  pages={1--36},
+  year={2020},
+  publisher={ACM New York, NY, USA}
+}
+%RFC for IP
+@misc{postel1981rfc0791,
+  title={Rfc0791: Internet protocol},
+  author={Postel, Jon},
+  year={1981},
+  publisher={RFC Editor}
+}
+%Door lock security 
+@inproceedings{pavelic2018internet,
+  title={Internet of things cyber security: Smart door lock system},
+  author={Paveli{\'c}, Marko and Lon{\v{c}}ari{\'c}, Zvonimir and Vukovi{\'c}, Marin and Ku{\v{s}}ek, Mario},
+  booktitle={2018 international conference on smart systems and technologies (SST)},
+  pages={227--232},
+  year={2018},
+  organization={IEEE}
+}
+%smart home definition
+@article{darby2018smart,
+  title={Smart technology in the home: time for more clarity},
+  author={Darby, Sarah J},
+  journal={Building Research \& Information},
+  volume={46},
+  number={1},
+  pages={140--147},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
+
+%OSI Model 
+@inproceedings{osimodel,
+  title={Research based on OSI model},
+  author={Li, Yadong and Li, Danlan and Cui, Wenqiang and Zhang, Rui},
+  booktitle={2011 IEEE 3rd International Conference on Communication Software and Networks},
+  pages={554--557},
+  year={2011},
+  organization={IEEE}
+}
+%Wifi use in smarthome
+@inproceedings{wifiinsmarthome,
+  title={A review of connectivity challenges in IoT-smart home},
+  author={Samuel, S Sujin Issac},
+  booktitle={2016 3rd MEC International conference on big data and smart city (ICBDSC)},
+  pages={1--4},
+  year={2016},
+  organization={IEEE}
+}
+%IEEE802.1
+@ARTICLE{802.1,
+  author={},
+  journal={IEEE Std 802.1Q-2018 (Revision of IEEE Std 802.1Q-2014)}, 
+  title={IEEE Standard for Local and Metropolitan Area Network--Bridges and Bridged Networks}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1-1993},
+  doi={10.1109/IEEESTD.2018.8403927}}
+  %IEEE 802.3
+  @ARTICLE{802.3,
+  author={},
+  journal={IEEE Std 802.3-2018 (Revision of IEEE Std 802.3-2015)}, 
+  title={IEEE Standard for Ethernet}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1-5600},
+  doi={10.1109/IEEESTD.2018.8457469}}
+  %IEEE 802.11
+  @ARTICLE{7786995,
+  author={},
+  journal={IEEE Std 802.11-2016 (Revision of IEEE Std 802.11-2012)}, 
+  title={IEEE Standard for Information technology—Telecommunications and information exchange between systems Local and metropolitan area networks—Specific requirements - Part 11: Wireless LAN Medium Access Control (MAC) and Physical Layer (PHY) Specifications}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={1-3534},
+  doi={10.1109/IEEESTD.2016.7786995}}
+  %rfc1042
+  @techreport{rfc1042,
+  title={Standard for the transmission of IP datagrams over IEEE 802 networks},
+  author={Postel, Jon and Reynolds, Joyce K},
+  year={1988}
+}
+%rfc826
+@article{rfc826,
+  title={RFC 826: An ethernet address resolution protocol},
+  author={Plummer, David C},
+  journal={InterNet Network Working Group},
+  year={1982}
+}
+%rfc791
+@article{rfc791,
+  title={RFC 791,"},
+  author={Postel, Jon},
+  journal={The Internet Protocol},
+  year={1981}
+}
+%IEEE MAC address
+@misc{macaddress,
+  title={Guidelines for use of extended unique identifier (eui), organizationally unique identifier (oui), and company id (cid)},
+  author={IEEE Standards Association and others},
+  year={2018},
+  publisher={pdf, Tech. Rep., August 2017.[Online]. Available: https://standards. ieee~…}
+}
+%roborocks7 voulm
+@misc{Roborockvulnerability,
+  title={Ethical hacking of a premium robot vacuum: Penetration testing of the Roborock S7 robot vacuum cleaner},
+  author={Dahlberg Sundstr{\"o}m, Tobias and Nilsson, Johan},
+  year={2022}
+}
+%Vacuum laser eavesdropping
+@inproceedings{lindaeavesdropping,
+  title={Spying with your robot vacuum cleaner: eavesdropping via lidar sensors},
+  author={Sami, Sriram and Dai, Yimin and Tan, Sean Rui Xiang and Roy, Nirupam and Han, Jun},
+  booktitle={Proceedings of the 18th Conference on Embedded Networked Sensor Systems},
+  pages={354--367},
+  year={2020}
+}
+%IoT security 
+@article{Iotissues,
+  title={A review on security and privacy issues and challenges in internet of things},
+  author={Alferidah, Dhuha Khalid and Jhanjhi, NZ},
+  journal={International Journal of Computer Science and Network Security IJCSNS},
+  volume={20},
+  number={4},
+  pages={263--286},
+  year={2020}
+}
+%IoT security 
+@article{iotissues1,
+  title={A survey on internet-of-things security: threats and emerging countermeasures},
+  author={Swessi, Dorsaf and Idoudi, Hanen},
+  journal={Wireless Personal Communications},
+  volume={124},
+  number={2},
+  pages={1557--1592},
+  year={2022},
+  publisher={Springer}
+}
+%eavesdropping IoT
+@inproceedings{eavsIoT,
+  title={Iotspy: Uncovering human privacy leakage in iot networks via mining wireless context},
+  author={Gu, Tianbo and Fang, Zheng and Abhishek, Allaukik and Mohapatra, Prasant},
+  booktitle={2020 IEEE 31st Annual International Symposium on Personal, Indoor and Mobile Radio Communications},
+  pages={1--7},
+  year={2020},
+  organization={IEEE}
+}
+%Neato 
+@inproceedings{Neato,
+  title={Vacuums in the Cloud: Analyzing Security in a Hardened $\{$IoT$\}$ Ecosystem},
+  author={Ullrich, Fabian and Classen, Jiska and Eger, Johannes and Hollick, Matthias},
+  booktitle={13th USENIX Workshop on Offensive Technologies (WOOT 19)},
+  year={2019}
+}
+%DHCP
+@article{dhcp,
+  title={Rfc 2131-dynamic host configuration protocol, March 1997},
+  author={Droms, Ralph},
+  journal={Obsoletes RFC1541. Status: DRAFT STANDARD},
+  volume={3},
+  number={1},
+  year={1997}
+}
