--- a/thesis.tex
+++ b/thesis.tex
@@ -15,8 +15,7 @@
 \input{chapters/0aa-problem description.tex}
 \input{chapters/0a-abstract.tex}
 \input{chapters/0b-sammendrag.tex}
-\input{chapters/0c-Dedication.tex}
-\input{chapters/0d-frontmatter.tex}
+\input{chapters/0c-Preface.tex}
 
 \tableofcontents
 \listoffigures
@@ -27,17 +26,19 @@
 \printglossary                    % Print glossary
 
 \input{chapters/1-introduction.tex}
-\input{chapters/3-Method.tex}
-\input{chapters/4-Results.tex}
-\input{chapters/5-discussion.tex}
-\input{chapters/6-conclution.tex}
+\input{chapters/2-Background.tex}
+\input{chapters/3-Related_work}
+\input{chapters/4-Method.tex}
+\input{chapters/5-Results.tex}
+\input{chapters/6-discussion.tex}
+\input{chapters/7-conclution.tex}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
 
-\input{chapters/papers.tex}
+%\input{chapters/papers.tex}
 
-\appendix
-\input{appendices/a-appendix.tex}
+%\appendix
+%\input{appendices/a-appendix.tex}
 
 \end{document}
