Mye endringer i metode

--- a/thesis.bib
+++ b/thesis.bib
@@ -213,3 +213,140 @@
   number={1},
   year={1997}
 }
+
+@misc{neatsvor, 
+url={https://www.neatsvor.no/produkt/neatsvor-x600/?gclid=CjwKCAiA68ebBhB-EiwALVC-Nm_219gL2gwIMwlOFThWyclecbVDk8_U__2MeXSq1UjYP1-qUZKFShoCUwgQAvD_BwE},
+journal={Neatsvor},
+title={Neatsvor X600 Robotstøvsuger},
+year={2022}, 
+month={Aug} 
+}
+
+@misc{roborock, 
+url={https://no.roborock.com/pages/roborock-s7}, 
+title={S7, Ta rengjøringen til et nytt nivå med sonisk mopping},
+journal={Roborock Norway}, 
+year={2021} 
+}
+
+@misc{irobot, 
+url={https://www.irobot.no/roomba/i-serien/irobot-roomba-i7-medium-grey?gclid=CjwKCAiA68ebBhB-EiwALVC-NmJGRUtCbDqu4MbGqUzSI7oWI0sUhJ4anoxOmox74QZKRP7F0ozyKBoCuIIQAvD_BwE},
+title={iRobot® Roomba® i7 Medium Grey},
+journal={Irobot.no}, 
+year={2022} }
+
+@inproceedings{robotsel1,
+  title={IoT network protocols comparison for the purpose of IoT constrained networks},
+  author={He{\dj}i, Ivan and {\v{S}}peh, I and {\v{S}}arabok, A},
+  booktitle={2017 40th International Convention on Information and Communication Technology, Electronics and Microelectronics (MIPRO)},
+  pages={501--505},
+  year={2017},
+  organization={IEEE}
+}‌
+@article{robotsel2,
+  title={Networking protocols and standards for internet of things},
+  author={Salman, Tara and Jain, Raj},
+  journal={Internet of things and data analytics handbook},
+  pages={215--238},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+@article{robotsel3,
+  title={Network protocols, schemes, and mechanisms for internet of things (iot): Features, open challenges, and trends},
+  author={Triantafyllou, Anna and Sarigiannidis, Panagiotis and Lagkas, Thomas D},
+  journal={Wireless communications and mobile computing},
+  volume={2018},
+  year={2018},
+  publisher={Hindawi}
+}
+
+@inproceedings{robotsel4,
+  title={IoT Architecture for the Processing of Data Collected by a Central Vacuum Cleaner},
+  author={Contigiani, Marco and Pollini, Rama and Sturari, Mirco and Mancini, Adriano and Frontoni, Emanuele},
+  booktitle={International Design Engineering Technical Conferences and Computers and Information in Engineering Conference},
+  volume={58233},
+  pages={V009T07A044},
+  year={2017},
+  organization={American Society of Mechanical Engineers}
+}
+
+@misc{robotsel5, 
+url={https://smartrobotreviews.com/g/rv/roborock-s7/}, 
+journal={Smartrobotreviews.com}, 
+year={2021} }
+
+@misc{robotsel6, 
+url={https://smartrobotreviews.com/g/rv/irobot-roomba-i7-7150/}, 
+journal={Smartrobotreviews.com}, 
+year={2018} 
+}
+
+@misc{robotsel7, 
+title={Mobile App}, 
+url={https://www.home-assistant.io/integrations/mobile_app/}, 
+journal={Home Assistant}, author={Home Assistant}, 
+year={2023} 
+}
+
+@misc{robotsel8, 
+url={https://no.roborock.com/pages/robot-vacuum-cleaner-compare}, 
+journal={Roborock Norway}, 
+year={2023} 
+}
+
+@misc{robotsel9, 
+url={https://www.bestcordlessvacuumguide.com/roomba-comparison/}, 
+journal={Bestcordlessvacuumguide.com}, 
+year={2017}, 
+month={Jan} 
+}
+
+@misc{robotsel10, 
+title={Xiaomi Robot Vacuums Comparison Chart: 1T, Mi Robot, MiJia 1S, Mi Robot-Vacuum Mop P (STYJ02YM), MiJia 1C, MiJia G1}, 
+url={https://smartrobotreviews.com/s/robot-vacuums/xiaomi-robot-vacuums-comparison/}, 
+journal={Smartrobotreviews.com}, 
+author={Red, Natalie}, 
+year={2019}, 
+month={Aug} 
+}
+
+@misc{robotsel11, 
+url={https://www.tomsguide.com/us/best-robot-vacuums,review-2000.html}, 
+journal={Tom’s Guide}, 
+publisher={Tom’s Guide}, 
+author={Lawrence, Cynthia and Mortram, Katie}, 
+year={2022}, 
+month={Nov} 
+}
+
+@misc{robotsel12, 
+title={The Best Robot Vacuums for 2023}, 
+url={https://uk.pcmag.com/vacuums/74630/the-best-robot-vacuums}, 
+journal={PCMag UK}, 
+publisher={PCMag UK}, 
+author={Moscaritolo, Angela}, 
+year={2022}, 
+month={Dec} 
+}
+
+@misc{robotsel13, 
+url={https://www.hjemoghage.no/robotstovsuger-test/?tid=robotstovsuger-ad&gclid=Cj0KCQjwguGYBhDRARIsAHgRm4-1N_SChYVvvL2gNk6Zd7sJ1-CKhCW-VOfcdOJIsheRGWfOQqWdPv4aAgr4EALw_wcB}, 
+journal={Hjem Og Hage | Hjem Og Hage}, 
+year={2021}, 
+month={Aug}
+}
+
+‌‌
+
+‌
+
+‌
+
+‌
+
+
+‌‌
+‌
+
+
+‌
