Table in Method

--- a/thesis.bib
+++ b/thesis.bib
@@ -335,7 +335,34 @@ journal={Hjem Og Hage | Hjem Og Hage},
 year={2021}, 
 month={Aug}
 }
+@misc{kalidownload, 
+url={https://www.kali.org/get-kali/#kali-arm}, 
+journal={Kali Linux}, 
+publisher={Get Kali | Kali Linux}, 
+author={Kali}, 
+year={2022}, 
+month={Jul} 
+}
 
+@misc{balenaetcherdownload, 
+url={https://www.balena.io/etcher/}, 
+journal={balenaEtcher}, 
+year={2023} 
+}
+
+@misc{microsdcard, 
+url={https://www.clasohlson.com/no/Sandisk-MicroSD-Extreme-Flash-UHS1-minnekort-/p/38-7725}, journal={Clasohlson.com}, 
+year={2023} 
+}
+@misc{tp-link, 
+url={https://www.dustinhome.no/product/5011024916/tl-wn722n-usb-wifi-adapter?gclid=Cj0KCQiAiJSeBhCCARIsAHnAzT8kjxqZMR4b4kEuCuW30GfAglYCv5uMxn43eu6d5vy24Ios4c9zoc0aAiKqEALw_wcB&tab=specification}, 
+journal={Dustinhome.no}, 
+year={2023} 
+}
+
+‌
+‌‌
+‌
 ‌‌
 
 ‌
