--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,6 @@
 \documentclass[british,titlepage]{ntnuthesis}
+\usepackage{graphicx}
+\usepackage{array}
 
 \title{Sensitive Information Exposed By The Use Of Robot Vacuum Cleaners In Smart Homes }
 \shorttitle{Sensitive Information Exposed By The Use Of Robot Vacuum Cleaners In Smart Homes}
