Robot vacuum cleaner survey

--- a/thesis.bib
+++ b/thesis.bib
@@ -360,6 +360,13 @@ journal={Dustinhome.no},
 year={2023} 
 }
 
+@misc{prisjakt.no,
+url={https://www.prisjakt.no/}, 
+journal={Prisjakt}, 
+year={2023}
+}
+
+‌
 ‌
 ‌‌
 ‌
