--- a/thesis.bib
+++ b/thesis.bib
@@ -366,6 +366,42 @@ journal={Prisjakt},
 year={2023}
 }
 
+@INPROCEEDINGS{Raspberrypi3_as_a_platform,
+  author={Anire, Roselle B. and Cruz, Febus Reidj G. and Agulto, Ireneo C.},
+  booktitle={2017IEEE 9th International Conference on Humanoid, Nanotechnology, Information Technology, Communication and Control, Environment and Management (HNICEM)}, 
+  title={Environmental wireless sensor network using raspberry Pi 3 for greenhouse monitoring system}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1-5},
+  doi={10.1109/HNICEM.2017.8269426}}
+
+  @INPROCEEDINGS{Raspberrypi3_as_a_platform_1,
+  author={Budiman, Fajar and Rivai, Muhammad and Nugroho, Muhammad Akbar},
+  booktitle={2019 International Seminar on Intelligent Technology and Its Applications (ISITIA)}, 
+  title={Monitoring and Control System for Ammonia and pH Levels for Fish Cultivation Implemented on Raspberry Pi 3B}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={68-73},
+  doi={10.1109/ISITIA.2019.8937217}}
+
+  @misc{Network_Span_port,
+  url={https://www.cisco.com/c/en/us/support/docs/switches/catalyst-6500-series-switches/10570-41.html}, journal={Cisco},
+  year={2019}, 
+  month={Jan} 
+  }
+
+@misc{cisco_catalyst_8_port,
+url={https://www.cisco.com/c/en/us/td/docs/switches/lan/catalyst2960l/hardware/installation/guide/b_c2960l_8_16_hig/b_2960_L_hig_chapter_01.html}, 
+journal={Cisco},
+year={2021}, 
+month={Jan}
+}
+
+‌
+‌
+
 ‌
 ‌
 ‌‌
