--- a/thesis.bib
+++ b/thesis.bib
@@ -399,14 +399,33 @@ year={2021},
 month={Jan}
 }
 
+‌@misc{wifi_adapter_monitor_mode, 
+title={How to Enable Monitor Mode on TP-LINK TL-WN722N V2/V3 - NoobLinux},
+url={https://nooblinux.com/how-to-enable-monitor-mode-on-tp-link-tl-wn722n-v2-v3/?fbclid=IwAR2oQXyBw1XffxH64kNzccviJz-TJWlYdGdR7UovK6i-b8KaeKw3HEr7Nz4},
+journal={NoobLinux},
+author={Ed, N00b},
+year={2022},
+month={Jul}
+}
+
+@book{wireshark,
+  title={Wireshark and Ethereal network protocol analyzer toolkit},
+  author={Orebaugh, Angela and Ramirez, Gilbert and Beale, Jay},
+  year={2006},
+  publisher={Elsevier}
+}
 ‌
-‌
+@misc{Human-learn:Rule-based, 
+title={Human-Learn: Rule-Based Learning as an Alternative to Machine Learning},
+url={https://towardsdatascience.com/human-learn-rule-based-learning-as-an-alternative-to-machine-learning-baf1899ecb3a}, journal={Medium},
+publisher={Towards Data Science}, 
+author={Tran, Khuyen},
+year={2023}
+}
 
 ‌
-‌
-‌‌
-‌
-‌‌
+
+‌‌‌
 
 ‌
 
