--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,7 @@
 \documentclass[british,titlepage]{ntnuthesis}
 \usepackage{graphicx}
 \usepackage{array}
+\usepackage{biblatex}
 
 \title{Sensitive Information Exposed By The Use Of Robot Vacuum Cleaners In Smart Homes }
 \shorttitle{Sensitive Information Exposed By The Use Of Robot Vacuum Cleaners In Smart Homes}
@@ -9,6 +10,7 @@
 \date{CC-BY \ntnuthesisdate}
 
 \addbibresource{thesis.bib}
+
 
 \input{glossary.tex} % add glossary and acronym lists before document
 
