Started in Analysis chapter

--- a/thesis.bib
+++ b/thesis.bib
@@ -423,7 +423,27 @@ author={Tran, Khuyen},
 year={2023}
 }
 
-‌
+@misc{pyshark,
+title={GitHub - KimiNewt/pyshark: Python wrapper for tshark,
+allowing python packet parsing using wireshark dissectors},
+url={https://github.com/KimiNewt/pyshark/},
+journal={GitHub},
+author={KimiNewt}, 
+year={2023}, 
+month={Jan}
+}
+
+@techreport{rfc958_ntp,
+  title={Network time protocol (NTP)},
+  author={Mills, David L},
+  year={1985}
+}‌
+
+@techreport{rfc2131_dhcp,
+  title={Dynamic host configuration protocol},
+  author={Droms, Ralph},
+  year={1997}
+}‌
 
 ‌‌‌
 
