--- a/thesis.tex
+++ b/thesis.tex
@@ -33,6 +33,7 @@
 \input{chapters/2-Background.tex}
 \input{chapters/3-Related_work}
 \input{chapters/4-Method.tex}
+\input{chapters/4b-Analysis.tex}
 \input{chapters/5-Results.tex}
 \input{chapters/6-discussion.tex}
 \input{chapters/7-conclution.tex}
