Masse masse endirnger, redo metode og analyse på startet på

--- a/thesis.bib
+++ b/thesis.bib
@@ -445,6 +445,30 @@ month={Jan}
   year={1997}
 }‌
 
+‌@misc{GooglePlay,
+url={https://play.google.com/store/games?pli=1},
+journal={Google.com},
+year={2021}
+}
+
+@misc{kali_downlaod,
+title={Get Kali | Kali Linux},
+url={https://www.kali.org/get-kali/#kali-arm},
+journal={Kali Linux},
+publisher={Get Kali | Kali Linux},
+author={Kali}, 
+year={2022},
+month={Nov} 
+}
+
+@misc{wireshark_download_2016, url={https://www.wireshark.org/download.html}, journal={Wireshark}, year={2016} }
+
+@misc{Kali_monitormode_guide, title={How to Enable Monitor Mode on TP-LINK TL-WN722N V2/V3 - NoobLinux}, url={https://nooblinux.com/how-to-enable-monitor-mode-on-tp-link-tl-wn722n-v2-v3/?fbclid=IwAR0YmWqYBo_PApEi1-OvpYmZqm5m_4m40R4rcGI-cOnpmvoc4PFmdqpCKJA}, journal={NoobLinux}, author={Ed, N00b}, year={2022}, month={Jul} }
+
+‌
+
+‌
+‌
 ‌‌‌
 
 ‌
