--- a/thesis.tex
+++ b/thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{float}
 \usepackage{longtable}
 \usepackage{listings}
+\usepackage{xcolor} 
 
 \lstset{language=Python,
     basicstyle=\ttfamily,
