--- a/thesis.tex
+++ b/thesis.tex
@@ -6,8 +6,8 @@
 \usepackage{float}
 \usepackage{longtable}
 \usepackage{listings}
-\usepackage{xcolor} 
-
+\usepackage{xcolor}
+\usepackage{multirow}
 \lstset{language=Python,
     basicstyle=\ttfamily,
     keywordstyle=\color{blue}\ttfamily,
