--- a/thesis.tex
+++ b/thesis.tex
@@ -49,13 +49,11 @@
 \input{chapters/1-introduction.tex}
 \input{chapters/2-Background.tex}
 \input{chapters/3-Related_work}
-%\input{chapters/4-Method.tex}
-\input{chapters/4a-Method-redo.tex}
-%\input{chapters/4b-Analysis.tex}
-\input{chapters/5b Analysis and Results.tex}
-\input{chapters/5-Results.tex}
-\input{chapters/6-discussion.tex}
-\input{chapters/7-conclution.tex}
+\input{chapters/4-Method.tex}
+\input{chapters/5-Analysis and Results.tex}
+\input{chapters/6-Evaluation}
+\input{chapters/7-Discussion.tex}
+\input{chapters/8-Conclution.tex}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
