Evaluation, discussion and conclusion

--- a/thesis.bib
+++ b/thesis.bib
@@ -465,21 +465,200 @@ month={Nov}
 
 @misc{Kali_monitormode_guide, title={How to Enable Monitor Mode on TP-LINK TL-WN722N V2/V3 - NoobLinux}, url={https://nooblinux.com/how-to-enable-monitor-mode-on-tp-link-tl-wn722n-v2-v3/?fbclid=IwAR0YmWqYBo_PApEi1-OvpYmZqm5m_4m40R4rcGI-cOnpmvoc4PFmdqpCKJA}, journal={NoobLinux}, author={Ed, N00b}, year={2022}, month={Jul} }
 
-‌
+‌@article{iotgrowth,
+  title={Knowledge growth and development: internet of things (IoT) research, 2006--2018},
+  author={Dachyar, M and Zagloel, Teuku Yuri M and Saragih, L Ranjaliba},
+  journal={Heliyon},
+  volume={5},
+  number={8},
+  pages={e02264},
+  year={2019},
+  publisher={Elsevier}
+}
 
 ‌
+
+@misc{roboticvacuumcleaner2021,
+    title={Robotic Vacuum Cleaner Market Size, Share | Global Report, 2028},
+    author={Fortune Business Insights},
+    year={2021},
+    howpublished={\url{https://www.fortunebusinessinsights.com/industry-reports/robotic-vacuum-cleaners-market-100645}},
+    note={Accessed on May 10, 2023}
+}
+
+‌@misc{ecovacs,
+  title = {Ecovacs intelligente automatiske rengjøringsroboter},
+  howpublished = {\url{https://www.ecovacs.com/no}},
+  journal = {ECOVACS nettsted},
+  year = {2022}
+}
+
+@ARTICLE{wifi_ieee80211,
+  author={},
+  journal={IEEE Std 802.11-2016 (Revision of IEEE Std 802.11-2012)}, 
+  title={IEEE Standard for Information technology—Telecommunications and information exchange between systems Local and metropolitan area networks—Specific requirements - Part 11: Wireless LAN Medium Access Control (MAC) and Physical Layer (PHY) Specifications}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={1-3534},
+  doi={10.1109/IEEESTD.2016.7786995}}
 ‌
 ‌‌‌
+@misc{macaddress,
+    title = {Registration Authority},
+    author = {{IEEE Standards Association}},
+    year = {2023},
+    month = {May},
+    howpublished = {\url{https://standards.ieee.org/products-programs/regauth/}},
+}
 
 ‌
+@misc{mac_address_lookup,
+    title = {MAC Address Lookup - MAC Lookup Online},
+    author = {{DNS Checker}},
+    year = {2023},
+    howpublished = {\url{https://dnschecker.org/mac-lookup.php}},
+}
+
+‌@article{rfc2460,
+  title={Internet protocol, version 6 (IPv6) specification},
+  author={Hinden, R},
+  journal={Request for Comments 2460},
+  year={1998}
+}
 
 ‌
+@techreport{rfc1631nat,
+  title={The IP network address translator (NAT)},
+  author={Egevang, Kjeld and Francis, Paul},
+  year={1994}
+}
 
-‌
-
-
+@techreport{rfc1918,
+  title={Address allocation for private internets},
+  author={Rekhter, Yakov and Moskowitz, Bob and Karrenberg, Daniel and de Groot, Geert Jan and Lear, Eliot},
+  year={1996}
+}
 ‌‌
+‌@techreport{rfc793tcp,
+  title={Transmission control protocol},
+  author={Postel, Jon},
+  year={1981}
+}
+
+@techreport{rfc768udp,
+  title={User datagram protocol},
+  author={Postel, Jon},
+  year={1980}
+}
 ‌
+@techreport{rfcdns,
+  title={Domain names: Implementation specification},
+  author={Mockapetris, Paul},
+  year={1983}
+}
+
+@misc{eavsdropping_fortinet,
+    title = {What are Eavesdropping Attacks?},
+    author = {{Fortinet}},
+    year = {2022},
+    howpublished = {\url{https://www.fortinet.com/resources/cyberglossary/eavesdropping}},
+}
+
+@misc{eavesdroppingwifi,
+    title = {Network Eavesdropping},
+    author = {{Wikipedia Contributors}},
+    year = {2023},
+    month = {Feb},
+    howpublished = {\url{https://en.wikipedia.org/wiki/Network_eavesdropping}},
+    organization = {Wikipedia},
+    publisher = {Wikimedia Foundation}
+}
+
+@misc{tcpdump,
+    title = {Tcpdump \& libpcap},
+    author = {{Tcpdump.org}},
+    year = {2023},
+    howpublished = {\url{https://www.tcpdump.org/}},
+    organization = {Tcpdump.org},
+}
+
+@misc{microsoftmessageanalyzer,
+    title = {Microsoft Message Analyzer Operating Guide},
+    author = {greggigwg},
+    year = {2022},
+    month = {Oct},
+    howpublished = {\url{https://learn.microsoft.com/en-us/message-analyzer/microsoft-message-analyzer-operating-guide}},
+    organization = {Microsoft.com}
+}
+
+@article{robotvacuum_voulne_nguyendeep,
+  title={A Deep Look Into Privacy and Security Of Vacuum Robot},
+  author={Nguyen, Trong}
+}
+
+@article{robotvacuum_voulne1_kaminski2016averting,
+  title={Averting robot eyes},
+  author={Kaminski, Margot E and Rueben, Matthew and Smart, William D and Grimm, Cindy M},
+  journal={Md. L. Rev.},
+  volume={76},
+  pages={983},
+  year={2016},
+  publisher={HeinOnline}
+}
+
+@misc{robotvacuum_voulne2_torgilsman2020ethical,
+  title={Ethical hacking of a Robot vacuum cleaner},
+  author={Torgilsman, Christoffer and Br{\"o}ndum, Eric},
+  year={2020}
+}
 
 
-‌
+@inproceedings{pingpong_trimananda2020packet,
+  title={Packet-level signatures for smart home devices},
+  author={Trimananda, Rahmadi and Varmarken, Janus and Markopoulou, Athina and Demsky, Brian},
+  booktitle={Network and Distributed Systems Security (NDSS) Symposium},
+  volume={2020},
+  year={2020}
+}
+
+@inproceedings{Eavs_relat_alyami2022wifi,
+  title={WiFi-based IoT devices profiling attack based on eavesdropping of encrypted wifi traffic},
+  author={Alyami, Mnassar and Alharbi, Ibrahim and Zou, Cliff and Solihin, Yan and Ackerman, Karl},
+  booktitle={2022 IEEE 19th Annual Consumer Communications \& Networking Conference (CCNC)},
+  pages={385--392},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{evas_relat_acar2020peek,
+  title={Peek-a-boo: I see your smart home activities, even encrypted!},
+  author={Acar, Abbas and Fereidooni, Hossein and Abera, Tigist and Sikder, Amit Kumar and Miettinen, Markus and Aksu, Hidayet and Conti, Mauro and Sadeghi, Ahmad-Reza and Uluagac, Selcuk},
+  booktitle={Proceedings of the 13th ACM Conference on Security and Privacy in Wireless and Mobile Networks},
+  pages={207--218},
+  year={2020}
+}
+
+@article{evas_relat_xiong2022network,
+  title={Network traffic shaping for enhancing privacy in iot systems},
+  author={Xiong, Sijie and Sarwate, Anand D and Mandayam, Narayan B},
+  journal={IEEE/ACM Transactions on Networking},
+  volume={30},
+  number={3},
+  pages={1162--1177},
+  year={2022},
+  publisher={IEEE}
+}
+
+@misc{spear_phishing,
+  title = {What is Spear Phishing? Definition, Risks and More},
+  author = {{Fortinet}},
+  howpublished = {\url{https://www.fortinet.com/resources/cyberglossary/spear-phishing}},
+  year = {2022}
+}
+
+@article{random_mac_bernardos2020rfc,
+  title={RFC 8948 Structured Local Address Plan (SLAP) Quadrant Selection Option for DHCPv6},
+  author={Bernardos, CJ and Mourad, A},
+  year={2020}
+}
