--- a/thesis.bib
+++ b/thesis.bib
@@ -662,3 +662,17 @@ month={Nov}
   author={Bernardos, CJ and Mourad, A},
   year={2020}
 }
+
+@misc{dns_load_balancing,
+  title = {What is DNS-Based Load Balancing?},
+  author = {{Cloudflare}},
+  year = {2023},
+  url={https://www.cloudflare.com/learning/performance/what-is-dns-load-balancing/},
+  note = {Accessed on May 18, 2023},
+}
+
+@techreport{igmp_rfc2236,
+  title={Internet group management protocol, version 2},
+  author={Fenner, William},
+  year={1997}
+}
