--- a/thesis.bib
+++ b/thesis.bib
@@ -676,3 +676,82 @@ month={Nov}
   author={Fenner, William},
   year={1997}
 }
+
+@article{lin2016iot,
+  title={IoT privacy and security challenges for smart home environments},
+  author={Lin, Huichen and Bergmann, Neil W},
+  journal={Information},
+  volume={7},
+  number={3},
+  pages={44},
+  year={2016},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@incollection{mantas2011security,
+  title={Security in smart home environment},
+  author={Mantas, Georgios and Lymberopoulos, Dimitrios and Komninos, Nikos},
+  booktitle={Wireless Technologies for Ambient Assisted Living and Healthcare: Systems and Applications},
+  pages={170--191},
+  year={2011},
+  publisher={IGI global}
+}
+
+@misc{homeassistant2023,
+    title = {Home Assistant},
+    author = {Home Assistant},
+    year = {2023},
+    journal = {Home Assistant},
+    url = {https://www.home-assistant.io/}
+}
+
+@article{traffic_shaping_xiong2022network,
+  title={Network traffic shaping for enhancing privacy in iot systems},
+  author={Xiong, Sijie and Sarwate, Anand D and Mandayam, Narayan B},
+  journal={IEEE/ACM Transactions on Networking},
+  volume={30},
+  number={3},
+  pages={1162--1177},
+  year={2022},
+  publisher={IEEE}
+}
+
+@inproceedings{traffic_shaping_saeed2017carousel,
+  title={Carousel: Scalable traffic shaping at end hosts},
+  author={Saeed, Ahmed and Dukkipati, Nandita and Valancius, Vytautas and The Lam, Vinh and Contavalli, Carlo and Vahdat, Amin},
+  booktitle={Proceedings of the Conference of the ACM Special Interest Group on Data Communication},
+  pages={404--417},
+  year={2017}
+}
+
+@misc{irobotroombai7_picture,
+    title = {iRobot Roomba i7 Robotstøvsuger i715040},
+    author = {{Elkjop.no}},
+    year = {2023},
+    journal = {Elkjop.no},
+    url = {https://www.elkjop.no/product/hjem-rengjoring-og-kjokkenutstyr/stovsugere-og-rengjoring/robotstovsuger/irobot-roomba-i7-robotstovsuger-i715040/273857}
+}
+
+@misc{tshark_filter,
+    title = {tshark(1)},
+    author = {{Wireshark.org}},
+    year = {2023},
+    journal = {Wireshark.org},
+    url = {https://www.wireshark.org/docs/man-pages/tshark.html}
+}
+
+@misc{winscp2023,
+    title = {WinSCP :: Official Site :: Download},
+    author = {{Winscp.net}},
+    year = {2023},
+    journal = {Winscp.net},
+    url = {https://winscp.net/eng/download.php}
+}
+
+@misc{ifttt,
+    title = {IFTTT},
+    author = {eliaswirth},
+    year = {2023},
+    journal = {IFTTT},
+    url = {https://ifttt.com/applets/hJMKghVa-if-someone-calls-start-maps-and-show-his-location}
+}
