--- a/thesis.tex
+++ b/thesis.tex
@@ -48,14 +48,14 @@
 \printglossary[type=\acronymtype] % Print acronyms
 \printglossary                    % Print glossary
 
-\input{chapters/1-introduction.tex}
-\input{chapters/2-Background.tex}
-\input{chapters/3-Related_work}
-\input{chapters/4-Method.tex}
+%\input{chapters/1-introduction.tex}
+%\input{chapters/2-Background.tex}
+%\input{chapters/3-Related_work}
+%\input{chapters/4-Method.tex}
 \input{chapters/5-Analysis and Results.tex}
-\input{chapters/6-Evaluation}
-\input{chapters/7-Discussion.tex}
-\input{chapters/8-Conclution.tex}
+%\input{chapters/6-Evaluation}
+%\input{chapters/7-Discussion.tex}
+%\input{chapters/8-Conclution.tex}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
