--- a/thesis.bib
+++ b/thesis.bib
@@ -755,3 +755,14 @@ month={Nov}
     journal = {IFTTT},
     url = {https://ifttt.com/applets/hJMKghVa-if-someone-calls-start-maps-and-show-his-location}
 }
+
+@misc{irobot2023_amazone,
+    title = {iRobot},
+    author = {{Wikipedia Contributors}},
+    year = {2023},
+    month = {May},
+    journal = {Wikipedia},
+    publisher = {Wikimedia Foundation},
+    url = {https://en.wikipedia.org/wiki/IRobot}
+}
+
