--- a/thesis.tex
+++ b/thesis.tex
@@ -26,7 +26,8 @@
 
 \title{Private Information Exposed By The Use Of Robot Vacuum Cleaners In Smart Environments}
 \shorttitle{Private Information Exposed By The Use Of RVC In Smart Environments}
-\author{B. Ulsmåg}
+\author{Benjamin Andreas Ulsmåg}
+\shortauthor{B. Ulsmåg}
 \date{CC-BY \ntnuthesisdate}
 
 \addbibresource{thesis.bib}
@@ -48,14 +49,15 @@
 \printglossary[type=\acronymtype] % Print acronyms
 \printglossary                    % Print glossary
 
-%\input{chapters/1-introduction.tex}
-%\input{chapters/2-Background.tex}
-%\input{chapters/3-Related_work}
-%\input{chapters/4-Method.tex}
+\input{chapters/1-introduction.tex}
+\input{chapters/2-Background.tex}
+\input{chapters/3-Related_work}
+\input{chapters/4-Method.tex}
 \input{chapters/5-Analysis and Results.tex}
-%\input{chapters/6-Evaluation}
-%\input{chapters/7-Discussion.tex}
-%\input{chapters/8-Conclution.tex}
+\input{chapters/5-redo-Analysis and Results}
+\input{chapters/6-Evaluation}
+\input{chapters/7-Discussion.tex}
+\input{chapters/8-Conclution.tex}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
