Ferdig med feedback

--- a/thesis.bib
+++ b/thesis.bib
@@ -766,3 +766,42 @@ month={Nov}
     url = {https://en.wikipedia.org/wiki/IRobot}
 }
 
+@techreport{tls_rfc,
+  title={The transport layer security (TLS) protocol version 1.3},
+  author={Rescorla, Eric},
+  year={2018}
+}
+
+@techreport{ssh_rfc,
+  title={The secure shell (SSH) transport layer protocol},
+  author={Ylonen, Tatu and Lonvick, Chris},
+  year={2006}
+}
+
+@misc{ipsec_rfc,
+  title={RFC1825: Security architecture for the Internet Protocol},
+  author={Atkinson, Randall},
+  year={1995},
+  publisher={RFC Editor}
+}
+
+@techreport{l2tp_rfc,
+  title={Layer two tunneling protocol" L2TP"},
+  author={Townsley, W and Valencia, A and Rubens, Allan and Pall, G and Zorn, Glen and Palter, Bill},
+  year={1999}
+}
+
+@techreport{ietf-madinas-mac-address-randomization-06,
+    number =    {draft-ietf-madinas-mac-address-randomization-06},
+    type =      {Internet-Draft},
+    institution =   {Internet Engineering Task Force},
+    publisher = {Internet Engineering Task Force},
+    note =      {Work in Progress},
+    url =       {https://datatracker.ietf.org/doc/draft-ietf-madinas-mac-address-randomization/06/},
+        author =    {Juan-Carlos Zúñiga and Carlos J. Bernardos and Amelia Andersdotter},
+    title =     {{Randomized and Changing MAC Address}},
+    pagetotal = 16,
+    year =      2023,
+    month =     mar,
+    day =       11
+}
