--- a/thesis.tex
+++ b/thesis.tex
@@ -24,7 +24,7 @@
 }
 
 
-\title{Private Information Exposed By The Use Of Robot Vacuum Cleaners In Smart Environments}
+\title{Private Information Exposed By The Use Of Robot Vacuum Cleaner In Smart Environments}
 \shorttitle{Private Information Exposed By The Use Of RVC In Smart Environments}
 \author{Benjamin Andreas Ulsmåg}
 \shortauthor{B. Ulsmåg}
@@ -54,7 +54,6 @@
 \input{chapters/3-Related_work}
 \input{chapters/4-Method.tex}
 \input{chapters/5-Analysis and Results.tex}
-\input{chapters/5-redo-Analysis and Results}
 \input{chapters/6-Evaluation}
 \input{chapters/7-Discussion.tex}
 \input{chapters/8-Conclution.tex}
@@ -67,6 +66,8 @@
 \appendix
 \appendixpage
 \input{appendices/a-Detection algorithm}
+\input{appendices/b-packet-extract}
+\input{appendices/C-DNS_Extraction}
 
 \end{document}
 
